[package]
name = "wasi-http-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "wasi-http-guest",
]

[dependencies]
anyhow = "1.0.75"
futures = "0.3.29"
http = "1.0.0"
hyper = "1.0.1"
hyper-util = { version = "0.1.1", features = ["tokio", "full"] }
pin-project = "1.1.3"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasmtime = { version = "15.0.0", features = ["component-model"] }
