[package]
name = "wasi-http-guest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", default-features = false }
bytes = "1.5.0"
futures = "0.3.29"
http = "1.0.0"
http-body = "1.0.0"
tower = "0.4.13"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.14.0" }
